# phorest_pipeline

./: .gitignore  ARGUS_USB_mounting.md  Feature_locations.json  Feature_locations.toml  Instructions.md  MANIFEST.in  Phorest_config.toml  README.md  ROI_manifest.json  camera_config.ini  camera_exploration.ipynb  config.ini  phorest.py  prepare_files_for_image_analysis.py  pyproject.toml  run_communicator.py  run_compressor.py  run_create_directories.py  run_file_backup.py  run_find_camera_index.py  run_find_thermocouple_serials.py  run_processor.py  run_storage_check.py
Generated_files/: CalculatedImageFeatures.json
INTERNAL_FILES/: CSV_plotting.ipynb  Check_Bars.ipynb  Network_Setup.md  camera_exploration.ipynb  communicate_results.ipynb  continuous_capture_viewer.sh  mount_UoY_network_drive.sh  network_mounting.md  run_find_camera_index_libcamera.py  streaming_video_TCP.md  temp.py
assets/Label_templates/: Chip_map.json  Chip_map_list.json
config_file_preparation/: Locator_functions.py  generate_ROI_JSON.py
config_file_preparation/Label_templates/: Chip_map.json  Chip_map_list.json
configs/: Feature_locations.example.toml  Feature_locations.toml  Phorest_config.toml
configs/config_examples/: Phorest_config.example.toml
docs/: Developer_guide.md  Laptop-to-PhorestPi_network_setup_guide.md  Network_drive_mounting.md  Phorest_device_installation_guide.md  Project_deploying_guide.md  README.md  Raspberry_Pi_installation_guide.md  Streaming_over_TCP_guide.md  USB_mounting_guide.md  User_Guide.md  Wiring_thermocouple_guide.md
launchers/: check_roi_listing.py  run_collector.py  run_continuous_capture.py  run_syncer.py
notebooks/: CSV_plotting.ipynb  Check_Bars.ipynb  Check_Bars_temp.ipynb  Check_CSV_file.ipynb  communicate_results.ipynb  filter_ROI_manifest.ipynb  filter_metadata_manifest.ipynb  filter_metadata_manifest_by_date.ipynb  filter_metadata_manifest_by_index.ipynb  image_compression_exploration copy.ipynb
phorest_pipeline/analysis/: file_utils.py  geometry.py  image_utils.py  io.py  matching.py  visualise.py
phorest_pipeline/collector/: argus_camera_controller.py  camera_config.py  camera_controller.py  continuous_capture_logic.py  dummy_camera_controller.py  hawkeye_camera_controller.py  logi_camera_controller.py  logic.py  thermocouple_controller.py  tis_camera_controller.py
phorest_pipeline/collector/sources/: dummy_camera_controller.py  hawkeye_camera_controller.py  image_file_importer.py  logi_camera_controller.py  thermocouple_controller.py  tis_camera_controller.py
phorest_pipeline/communicator/: logic.py
phorest_pipeline/communicator/outputs/: csv_plot_handler.py
phorest_pipeline/compressor/: logic.py
phorest_pipeline/file_backup/: logic.py
phorest_pipeline/processor/: analysis_functions.py  analysis_methods.py  logic.py  process_image.py
phorest_pipeline/shared/: cameras.py  communication_methods.py  config.py  helper_utils.py  logger_config.py  metadata_manager.py  states.py
phorest_pipeline/syncer/: logic.py
scripts/: generate_roi_manifest.py  launch_phorest.sh  list_phorest_processes.sh  mount_UoY_network_drive.sh  phorest.sh  start_TCP_stream.sh
src/: check_roi_listing.py  prepare_files_for_image_analysis.py  run_create_directories.py  run_find_camera_index.py  run_find_thermocouple_serials.py  run_processor.py  run_storage_check.py
src/phorest_pipeline/: __init__.py
src/phorest_pipeline/analysis/: file_utils.py
src/phorest_pipeline/collector/: continuous_capture_logic.py  logic.py  single_capture_logic.py
src/phorest_pipeline/collector/sources/: argus_camera_controller.py  dummy_camera_controller.py  hawkeye_camera_controller.py  image_file_importer.py  logi_camera_controller.py
src/phorest_pipeline/communicator/: logic.py
src/phorest_pipeline/communicator/outputs/: csv_plot_handler.py
src/phorest_pipeline/compressor/: logic.py
src/phorest_pipeline/file_backup/: logic.py
src/phorest_pipeline/health_check/: logic.py
src/phorest_pipeline/processor/: analysis_functions.py  analysis_methods.py  logic.py  process_image.py
src/phorest_pipeline/scripts/: check_roi_listing.py  check_storage.py  find_camera_index.py  generate_roi_manifest.py
src/phorest_pipeline/shared/: config.py  helper_utils.py  image_sources.py  logger_config.py  metadata_manager.py  states.py
src/phorest_pipeline/syncer/: logic.py
src/phorest_pipeline/tui/: curses_main.py  main.py  textual_main.py  tui_styles.css
