[project]
name = "phorest_pipeline"
version = "0.1.0"
description = "A multi-process pipeline for data collection, processing, and communication."
readme = "README.md"
authors = [
    { name = "cr806", email = "christopher.reardon@york.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[project.scripts]
# run-collector = "phorest_pipeline.collector.logic:run_collector"
# run-processor = "phorest_pipeline.processor.logic:run_processor"
# run-communicator = "phorest_pipeline.communicator.logic:run_communicator"
# run-comntinuous-capture = "phorest_pipeline.collector.continuous_capture_logic:run_continuous_capture"

[tool.setuptools]
# Tell setuptools exactly which top-level directories are packages
packages = ["phorest_pipeline", "config_file_preparation"]

# Optional dev dependencies
#[project.optional-dependencies]
#dev = [
#    "pytest",
#    "ruff",
#]