[project]
name = "phorest_pipeline"
version = "0.1.0"
description = "A multi-process pipeline for data collection, processing, and communication."
readme = "README.md"
authors = [
    { name = "cr806", email = "christopher.reardon@york.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[project.scripts]
phorest = "phorest:main"

[tool.setuptools]
# Tell setuptools exactly which top-level directories are packages
packages = ["phorest_pipeline", "config_file_preparation"]

[tool.ruff]
lint.ignore = [
    "E501",  # Pycodestyle - line too long
    "D1",    # Pydocstyle - missing docstring in public module, class, or function
    "FBT003", # Flake8-boolean-trap - boolean position value in function call
    "D203",  # Pydocstyle - one blank line required before class docstring
    "D212",  # Pydocstyle - summary line should be immediately after the opening quotes.
    "D401",  # Pydocstyle - Checks for docstring first lines that are not in an imperative mood.
    "S311",  # Flake8-bandit - Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "PERF401", # Perflint - Checks for for loops that can be replaced by a list comprehension.
    "RET504", # Flake8-return - Checks for variable assignments that immediately precede a return of the assigned variable.
    "FA102", # Flake8-future-annotations - Missing `from __future__ import annotations`, but uses PEP 604 union
]
lint.extend-select = [
    "I",    # isort – import ordering checks
    "ARG",  # Flake8-unused-arguments – flags unused function arguments
    "PTH",  # Flake8-use-pathlib – encourages pathlib over os.path
]

# Optional dev dependencies
#[project.optional-dependencies]
#dev = [
#    "pytest",
#    "ruff",
#]